--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -132,6 +132,21 @@ repositories:
       url: https://github.com/srv/avt_vimba_camera.git
       version: lunar
     status: maintained
+  axis_camera:
+    doc:
+      type: git
+      url: https://github.com/ros-drivers/axis_camera.git
+      version: master
+    release:
+      tags:
+        release: release/lunar/{package}/{version}
+      url: https://github.com/clearpath-gbp/axis_camera-release.git
+      version: 0.2.1-0
+    source:
+      type: git
+      url: https://github.com/ros-drivers/axis_camera.git
+      version: master
+    status: unmaintained
   bfl:
     release:
       tags:
