--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9457,7 +9457,8 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/Terabee/teraranger_array-release.git
-      version: 1.0.1-0
+      version: 1.1.0-0
+    status: maintained
   teraranger_array_converter:
     release:
       tags:
