--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1184,6 +1184,16 @@ python-googleapi:
     wily_python3: [python3-googleapi]
     xenial: [python-googleapi]
     xenial_python3: [python3-googleapi]
+python-graphviz-pip:
+  debian:
+    pip:
+      packages: [graphviz]
+  fedora:
+    pip:
+      packages: [graphviz]
+  ubuntu:
+    pip:
+      packages: [graphviz]
 python-gridfs:
   debian: [python-gridfs]
   fedora: [python-pymongo-gridfs]
