--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -14909,11 +14909,23 @@ repositories:
       url: https://github.com/openrobotics/talos_description.git
       version: indigo-devel
     status: developed
-  tango_ros_streamer:
+  tango_ros:
     doc:
       type: git
       url: https://github.com/Intermodalics/tango_ros.git
       version: master
+    release:
+      packages:
+      - tango_ros_messages
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/Intermodalics/tango_ros-release.git
+      version: 2.0.0-0
+    source:
+      type: git
+      url: https://github.com/Intermodalics/tango_ros.git
+      version: master
+    status: developed
   tblib:
     release:
       tags:
