--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -9508,11 +9508,23 @@ repositories:
       url: https://github.com/swri-robotics/swri_console.git
       version: master
     status: developed
-  tango_ros_streamer:
+  tango_ros:
     doc:
       type: git
       url: https://github.com/Intermodalics/tango_ros.git
       version: master
+    release:
+      packages:
+      - tango_ros_messages
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/Intermodalics/tango_ros-release.git
+      version: 2.0.0-0
+    source:
+      type: git
+      url: https://github.com/Intermodalics/tango_ros.git
+      version: master
+    status: developed
   tblib:
     release:
       tags:
