base: add nvidia-ml-py as pip dependency

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1865,6 +1865,13 @@ python-numpydoc:
     trusty: [python-numpydoc]
     xenial: [python-numpydoc]
     zesty: [python-numpydoc]
+python-nvidia-ml-py-pip:
+  osx:
+    pip:
+      packages: [nvidia-ml-py]
+  ubuntu:
+    pip:
+      packages: [nvidia-ml-py]
 python-oauth2:
   arch: [python-oauth2]
   debian:
