rdl: 0.9.3-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -6849,10 +6849,12 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://gitlab.com/jlack/rdl_release.git
+      version: 0.9.3-0
     source:
       type: git
       url: https://gitlab.com/jlack/rdl.git
       version: master
+    status: developed
   realsense_camera:
     doc:
       type: git
