--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -12881,7 +12881,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/adrianohrl/rqt_mrta.git
-      version: 0.2.5
+      version: indigo-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
@@ -12891,7 +12891,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/adrianohrl/rqt_mrta.git
-      version: 0.2.5
+      version: indigo-devel
     status: developed
   rqt_msg:
     doc:
