--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1688,6 +1688,8 @@ libgeos++-dev:
   fedora: [geos-devel]
   gentoo: [sci-libs/geos]
   ubuntu: [libgeos++-dev]
+libgeotiff:
+  ubuntu: [libgeotiff-dev]
 libgflags-dev:
   arch: [gflags]
   debian: [libgflags-dev]
