--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1688,7 +1688,11 @@ libgeos++-dev:
   fedora: [geos-devel]
   gentoo: [sci-libs/geos]
   ubuntu: [libgeos++-dev]
-libgeotiff:
+libgeotiff-dev:
+  arch:   [libgeotiff]
+  debian: [libgeotiff-dev]
+  fedora: [libgeotiff]
+  gentoo: [libgeotiff]
   ubuntu: [libgeotiff-dev]
 libgflags-dev:
   arch: [gflags]
