--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -463,6 +463,7 @@ cppad:
   gentoo: [sci-libs/coinor-cppad]
   ubuntu: [cppad]
 cppcheck:
+  arch: [cppcheck]
   debian: [cppcheck]
   fedora: [cppcheck]
   gentoo: [dev-util/cppcheck]
