rtt_ros_control: 0.1.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -8895,6 +8895,24 @@ repositories:
       url: https://github.com/orocos/rtt_geometry.git
       version: toolchain-2.9
     status: maintained
+  rtt_ros_control:
+    doc:
+      type: git
+      url: https://github.com/orocos/rtt_ros_control.git
+      version: master
+    release:
+      packages:
+      - rtt_control_msgs
+      - rtt_controller_manager_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/orocos-gbp/rtt_ros_control-release.git
+      version: 0.1.1-0
+    source:
+      type: git
+      url: https://github.com/orocos/rtt_ros_control.git
+      version: master
+    status: maintained
   rtt_ros_integration:
     doc:
       type: git
