--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1688,6 +1688,12 @@ libgeos++-dev:
   fedora: [geos-devel]
   gentoo: [sci-libs/geos]
   ubuntu: [libgeos++-dev]
+libgeotiff-dev:
+  arch:   [libgeotiff]
+  debian: [libgeotiff-dev]
+  fedora: [libgeotiff]
+  gentoo: [sci-libs/libgeotiff]
+  ubuntu: [libgeotiff-dev]
 libgflags-dev:
   arch: [gflags]
   debian: [libgflags-dev]
