--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -16815,7 +16815,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     release:
       tags:
         release: release/indigo/{package}/{version}
@@ -16824,7 +16824,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     status: developed
   zeroconf_avahi_suite:
     doc:
