--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -11151,7 +11151,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     release:
       tags:
         release: release/kinetic/{package}/{version}
@@ -11160,7 +11160,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/zbar_ros.git
-      version: hydro-devel
+      version: indigo-devel
     status: maintained
   zeroconf_avahi_suite:
     doc:
