Adding ifopt to documentation index for distros indigo, kinetic and lunar

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -3103,6 +3103,16 @@ repositories:
       url: https://github.com/ahornung/humanoid_msgs.git
       version: devel
     status: maintained
+  ifopt:
+    doc:
+      type: git
+      url: https://github.com/ethz-adrl/ifopt.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ethz-adrl/ifopt.git
+      version: master
+    status: developed
   image_common:
     doc:
       type: git
