--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -4781,6 +4781,16 @@ repositories:
       url: https://github.com/pal-gbp/idolink_node-release.git
       version: 0.1.2-0
     status: developed
+  ifopt:
+    doc:
+      type: git
+      url: https://github.com/ethz-adrl/ifopt.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ethz-adrl/ifopt.git
+      version: master
+    status: developed
   ihmc-ros-control:
     release:
       packages:
