handeye: 0.1.0-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -2831,6 +2831,21 @@ repositories:
       url: https://github.com/davidfischinger/haf_grasping.git
       version: kinetic
     status: maintained
+  handeye:
+    doc:
+      type: git
+      url: https://github.com/crigroup/handeye.git
+      version: master
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/crigroup/handeye-release.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/crigroup/handeye.git
+      version: master
+    status: developed
   hebiros:
     doc:
       type: git
