--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -15192,6 +15192,21 @@ repositories:
       url: https://github.com/tu-darmstadt-ros-pkg-gbp/topic_proxy-release.git
       version: 0.1.1-0
     status: maintained
+  tork_moveit_tutorial:
+    doc:
+      type: git
+      url: https://github.com/tork-a/tork_moveit_tutorial.git
+      version: indigo-devel
+    release:
+      tags:
+        release: release/indigo/{package}/{version}
+      url: https://github.com/tork-a/tork_moveit_tutorial-release.git
+      version: 0.0.3-0
+    source:
+      type: git
+      url: https://github.com/tork-a/tork_moveit_tutorial.git
+      version: indigo-devel
+    status: maintained
   tork_rpc:
     doc:
       type: git
