--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4055,9 +4055,16 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pytest:
   arch: [python-pytest]
-  debian: [python3-pytest]
-  fedora: [python3-pytest]
-  ubuntu: [python3-pytest]
+python3-pytest-pip:
+  debian:
+    pip:
+      packages: [pytest]
+  fedora:
+    pip:
+      packages: [pytest]
+  ubuntu:
+    pip:
+      packages: [pytest]
 python3-ruamel.yaml:
   debian:
     buster: [python3-ruamel.yaml]
