Add python3-pytest key for Ubunbu Bionic.
Bionic is the first release that will include python3-pytest 3.2 for ROS 2.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4055,6 +4055,8 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pytest:
   arch: [python-pytest]
+  ubuntu:
+    bionic: [python3-pytest]
 python3-pytest-pip:
   debian:
     pip:
