restore libgazebo7-dev to jessie. It's backported in the ROS repositories for Kinetic support

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1666,6 +1666,7 @@ libgazebo7-dev:
   arch: [gazebo]
   debian:
     buster: [libgazebo7-dev]
+    jessie: [libgazebo7-dev]
     stretch: [libgazebo7-dev]
   fedora:
     '25': [gazebo-devel]
