--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5487,6 +5487,20 @@ repositories:
       url: https://github.com/ros/nodelet_core.git
       version: indigo-devel
     status: maintained
+  non_persistent_voxel_layer:
+    doc:
+      type: git
+      url: https://github.com/SteveMacenski/nonpersistent_voxel_layer.git
+      version: master
+    release:
+      packages:
+      - nonpersistent_voxel_layer
+      url: https://github.com/SteveMacenski/nonpersistent_voxel_layer.git
+    source:
+      type: git
+      url: https://github.com/SteveMacenski/nonpersistent_voxel_layer.git
+      version: master
+    status: maintained
   novatel_gps_driver:
     doc:
       type: git
