loki_robot: 0.0.1-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4238,6 +4238,19 @@ repositories:
       url: https://github.com/easymov/log_server-release.git
       version: 0.1.4-1
     status: developed
+  loki_robot:
+    release:
+      packages:
+      - loki_bringup
+      - loki_demos
+      - loki_description
+      - loki_nav
+      - loki_robot
+      - loki_teleop
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/UbiquityRobotics-release/loki_robot-release.git
+      version: 0.0.1-0
   look_at_pose:
     doc:
       type: git
