--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -5521,6 +5521,16 @@ repositories:
       url: https://github.com/ros/nodelet_core.git
       version: indigo-devel
     status: maintained
+  nonpersistent_voxel_layer:
+    doc:
+      type: git
+      url: https://github.com/SteveMacenski/nonpersistent_voxel_layer.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/SteveMacenski/nonpersistent_voxel_layer.git
+      version: master
+    status: maintained
   novatel_gps_driver:
     doc:
       type: git
