--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -4238,6 +4238,12 @@ repositories:
       url: https://github.com/easymov/log_server-release.git
       version: 0.1.4-1
     status: developed
+  loki_base_node:
+    release:
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/UbiquityRobotics-release/loki_base_node-release.git
+      version: 0.2.0-0
   loki_robot:
     release:
       packages:
