--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -6378,7 +6378,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/IntelRealSense/librealsense.git
-      version: master
+      version: legacy
     release:
       tags:
         release: release/indigo/{package}/{version}
@@ -6387,7 +6387,7 @@ repositories:
     source:
       type: git
       url: https://github.com/IntelRealSense/librealsense.git
-      version: master
+      version: legacy
     status: maintained
   librms:
     doc:
