--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4055,8 +4055,7 @@ python3-pyparsing:
   ubuntu: [python3-pyparsing]
 python3-pytest:
   arch: [python-pytest]
-  ubuntu:
-    bionic: [python3-pytest]
+  ubuntu: [python3-pytest]
 python3-ruamel.yaml:
   debian:
     buster: [python3-ruamel.yaml]
