--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 # ROS distribution file
-# see REP 143: http://ros.org/reps/rep-0143.html
+# see REP 141: http://ros.org/reps/rep-0141.html
 ---
 release_platforms:
   debian:
@@ -7123,6 +7123,26 @@ repositories:
       type: git
       url: https://github.com/clearpathrobotics/robot_upstart.git
       version: jade-devel
+    status: maintained
+  roboteq_diff_driver:
+    doc:
+      depends:
+      - serial
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
+    release:
+      packages:
+      - roboteq_diff_driver
+      - roboteq_diff_msgs
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: 0.1.0-0
+    source:
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
     status: maintained
   robotis_controller_msgs:
     doc:
