--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1,6 +1,6 @@
 %YAML 1.1
 # ROS distribution file
-# see REP 141: http://ros.org/reps/rep-0141.html
+# see REP 143: http://ros.org/reps/rep-0143.html
 ---
 release_platforms:
   debian:
@@ -7138,7 +7138,6 @@ repositories:
       tags:
         release: release/kinetic/{package}/{version}
       url: https://github.com/ecostech/roboteq_diff_driver.git
-      version: 0.1.0-0
     source:
       type: git
       url: https://github.com/ecostech/roboteq_diff_driver.git
@@ -7865,6 +7864,24 @@ repositories:
       url: https://github.com/yuma-m/ros_wild.git
       version: master
     status: developed
+  rosabridge:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    release:
+      packages:
+      - rosabridge_arduino
+      - rosabridge_msgs
+      - rosabridge_server
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ecostech/rosabridge.git
+    source:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    status: maintained
   rosaria:
     doc:
       type: git
@@ -8176,25 +8193,6 @@ repositories:
       url: https://github.com/rospilot/rospilot.git
       version: kinetic
     status: developed
-  rosproxy:
-    doc:
-      type: git
-      url: https://github.com/ecostech/rosproxy.git
-      version: master
-    release:
-      packages:
-      - rosproxy_arduino
-      - rosproxy_msgs
-      - rosproxy_server
-      tags:
-        release: release/kinetic/{package}/{version}
-      url: https://github.com/ecostech/rosproxy.git
-      version: 0.1.1-0
-    source:
-      type: git
-      url: https://github.com/ecostech/rosproxy.git
-      version: master
-    status: maintained
   rospy_message_converter:
     release:
       tags:
