--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -11131,6 +11131,16 @@ repositories:
       url: https://github.com/g/roboteq.git
       version: master
     status: maintained
+  roboteq_diff_driver:
+    doc:
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
+    status: maintained
   robotican:
     doc:
       type: git
@@ -12044,6 +12054,16 @@ repositories:
       version: develop
     status: end-of-life
     status_description: Replaced by the web_video_server package.
+  rosabridge:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    status: maintained
   rosaria:
     doc:
       type: git
