--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -7124,6 +7124,16 @@ repositories:
       url: https://github.com/clearpathrobotics/robot_upstart.git
       version: jade-devel
     status: maintained
+  roboteq_diff_driver:
+    doc:
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ecostech/roboteq_diff_driver.git
+      version: master
+    status: maintained
   robotis_controller_msgs:
     doc:
       type: git
@@ -7845,6 +7855,16 @@ repositories:
       url: https://github.com/yuma-m/ros_wild.git
       version: master
     status: developed
+  rosabridge:
+    doc:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    source:
+      type: git
+      url: https://github.com/ecostech/rosabridge.git
+      version: master
+    status: maintained
   rosaria:
     doc:
       type: git
