--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -1549,7 +1549,7 @@ repositories:
   darknet_ros:
     doc:
       type: git
-      url: https://github.com/leggedrobotics/darknet_ros
+      url: https://github.com/leggedrobotics/darknet_ros.git
       version: master
     release:
       packages:
