--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -8639,6 +8639,9 @@ repositories:
       url: https://github.com/ros-drivers/openni_camera.git
       version: indigo-devel
     release:
+      packages:
+      - openni_camera
+      - openni_launch
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ros-gbp/openni_camera-release.git
@@ -8646,21 +8649,6 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-drivers/openni_camera.git
-      version: indigo-devel
-    status: maintained
-  openni_launch:
-    doc:
-      type: git
-      url: https://github.com/ros-drivers/openni_launch.git
-      version: indigo-devel
-    release:
-      tags:
-        release: release/indigo/{package}/{version}
-      url: https://github.com/ros-gbp/openni_launch-release.git
-      version: 1.9.8-0
-    source:
-      type: git
-      url: https://github.com/ros-drivers/openni_launch.git
       version: indigo-devel
     status: maintained
   openrave_planning:
