--- a/lunar/distribution.yaml
+++ b/lunar/distribution.yaml
@@ -2138,6 +2138,9 @@ repositories:
       url: https://github.com/ros-drivers/openni_camera.git
       version: indigo-devel
     release:
+      packages:
+      - openni_camera
+      - openni_launch
       tags:
         release: release/lunar/{package}/{version}
       url: https://github.com/ros-gbp/openni_camera-release.git
@@ -2146,22 +2149,6 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-drivers/openni_camera.git
-      version: indigo-devel
-    status: maintained
-  openni_launch:
-    doc:
-      type: git
-      url: https://github.com/ros-drivers/openni_launch.git
-      version: indigo-devel
-    release:
-      tags:
-        release: release/lunar/{package}/{version}
-      url: https://github.com/ros-gbp/openni_launch-release.git
-      version: 1.9.8-0
-    source:
-      test_pull_requests: true
-      type: git
-      url: https://github.com/ros-drivers/openni_launch.git
       version: indigo-devel
     status: maintained
   openslam_gmapping:
