care_o_bot: 0.6.6-0 in 'indigo/distribution.yaml' [bloom]

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -1319,6 +1319,10 @@ repositories:
       version: master
     status: maintained
   care_o_bot:
+    doc:
+      type: git
+      url: https://github.com/ipa320/care-o-bot.git
+      version: indigo_release_candidate
     release:
       packages:
       - care_o_bot
@@ -1328,7 +1332,7 @@ repositories:
       tags:
         release: release/indigo/{package}/{version}
       url: https://github.com/ipa320/care-o-bot-release.git
-      version: 0.6.5-0
+      version: 0.6.6-0
     status: maintained
   carl_bot:
     doc:
