add blender for arch and debian

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -235,6 +235,8 @@ bison:
   macports: [bison]
   ubuntu: [bison]
 blender:
+  arch: [blender]
+  debian: [blender]
   fedora: [blender]
   gentoo: [media-gfx/blender]
   ubuntu: [blender]
