care_o_bot: 0.6.6-0 in 'kinetic/distribution.yaml' [bloom]

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -787,6 +787,22 @@ repositories:
       url: https://github.com/osrf/capabilities.git
       version: master
     status: maintained
+  care_o_bot:
+    doc:
+      type: git
+      url: https://github.com/ipa320/care-o-bot.git
+      version: indigo_release_candidate
+    release:
+      packages:
+      - care_o_bot
+      - care_o_bot_desktop
+      - care_o_bot_robot
+      - care_o_bot_simulation
+      tags:
+        release: release/kinetic/{package}/{version}
+      url: https://github.com/ipa320/care-o-bot-release.git
+      version: 0.6.6-0
+    status: maintained
   cartesian_msgs:
     doc:
       type: git
